--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "sqlite3": "^4.1.0",
     "uuid": "^3.3.3",
-    "uuid4": "^1.1.4"
+    "uuid4": "^1.1.4",
+    "validate.js": "^0.13.1"
   }
 }
