--- a/frontend/adnat/package.json
+++ b/frontend/adnat/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "validate.js": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
