--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "backend:setup": "cd backend && yarn install"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "sqlite3": "^4.1.0",
     "uuid": "^3.3.3",
