--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "material-table": "^1.54.1",
     "sqlite3": "^4.1.0",
     "uuid": "^3.3.3",
     "uuid4": "^1.1.4",
