Completed ChangePassword, setDefaults for edit organisation and cleaned up code

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "backend:setup": "cd backend && yarn install"
   },
   "dependencies": {
+    "@material-ui/pickers": "^3.2.8",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "material-table": "^1.54.1",
