--- a/frontend/adnat/package.json
+++ b/frontend/adnat/package.json
@@ -6,13 +6,16 @@
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.12",
     "@types/react": "16.9.12",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
     "immer": "^5.0.0",
+    "material-table": "^1.54.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
