--- a/frontend/adnat/tsconfig.json
+++ b/frontend/adnat/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "sourceMap": true,
+    "module" : "commonJS",
     "target": "es6",
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "es2015",
+      "es2017",
+      "dom"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -12,12 +14,20 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "components/*": [
+        "src/components/*",
+        "src/features/*",
+        "src/helpers/*",
+        "src/layout/*",
+      ]
+    }
+
   },
   "include": [
     "src"
